# cmake-shared-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: TargetPublicHeaders.cmake
include/SharedLibrary/: SharedLibrary.hpp
src/: SharedLibrary.cpp
tests/: main.cpp
